--- a/style.css
+++ b/style.css
@@ -3641,6 +3641,10 @@ td {
       .rounded-xl {
         border-radius: 12px;
       }
+
+      .bk{
+        font-display: inherit !important;
+      }
       
       
   
